# ecart-new

cooking-ingredient-extractor/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
cooking-ingredient-extractor/config/: constants.py  settings.py
cooking-ingredient-extractor/scripts/: download_models.sh
cooking-ingredient-extractor/src/: main.py
cooking-ingredient-extractor/src/data/: models.py  schemas.py
cooking-ingredient-extractor/src/fusion/: fusion_engine.py  result_combiner.py
cooking-ingredient-extractor/src/models/audio_transcriber/: __init__.py  audio_extractor.py  whisper_handler.py
cooking-ingredient-extractor/src/models/text_analyzer/: __init__.py  ocr_engine.py  text_processor.py
cooking-ingredient-extractor/src/models/visual_detector/: __init__.py  detector.py  frame_extractor.py
cooking-ingredient-extractor/src/utils/: file_utils.py  video_utils.py
cooking-ingredient-extractor/tests/: test_audio_transcriber.py  test_visual_detector.py
